maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:48: error: expected class or object definition
def tagCaseAdj(x:Int,y:Int):Unit = {
^ShortestPathMaze:66: error: expected class or object definition
def isGridFull():Boolean = {
^ShortestPathMaze:77: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^ShortestPathMaze:78: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^ShortestPathMaze:79: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^ShortestPathMaze:80: error: Unmatched closing brace '}' ignored here
}
^